Ops/Dashboard/Stylesheets/Dashboard.css
/* ... */
#installedServices li .title
{
  position: absolute;
  top: 0;
  bottom: 0;
  left: 10px;
}

#installedServices li .identifier
{
  position: absolute;
  right: 100px;
  top: 0;
  bottom: 0;
  font-size: 12px;
  font-family: Menlo, Courier, monospace;
  color: rgba(255, 255, 255, 0.35);
}

#installedServices li .page
{
  position: absolute;
  right: 10px;
  top: 0;
  bottom: 0;
  font-size: 12px;
}

/* Collections ------------------------------------------------------------ */

#collectionsSection
{
  display: none;
}

/* Custom Scrollbars ------------------------------------------------------ */

::-webkit-scrollbar
{
  width: 20px;
}

::-webkit-scrollbar:horizontal
{
  height: 20px;
}

::-webkit-scrollbar-corner  
{
  display: none;
}

::-webkit-scrollbar-track
{
  margin-top: 6px;
  margin-bottom: 6px;
  border-width: 20px 0;
}

::-webkit-scrollbar-track:horizontal
{
  margin-left: 6px;
  margin-right: 6px;
  border-height: 20px 0;
}

::-webkit-scrollbar-thumb
{
  -webkit-border-image: url("../Images/UI/View/VerticalScrollbar.Thumb.png") 20 20 20 0;
  border-width: 20px 0;
  min-height: 40px;
}

::-webkit-scrollbar-thumb:hover
{
  -webkit-border-image: url("../Images/UI/View/VerticalScrollbar.Thumb.png") 20 0 20 20;
}

::-webkit-scrollbar-thumb:horizontal
{
  -webkit-border-image: url("../Images/UI/View/HorizontalScrollbar.Thumb.png") 0 20 20 20;
  border-width: 0 20px;
  min-width: 40px;
}

::-webkit-scrollbar-thumb:horizontal:hover
{
  -webkit-border-image: url("../Images/UI/View/HorizontalScrollbar.Thumb.png") 20 20 0 20;
}

